# maratona-ufmg

./: .env  .gitignore  README.md  manage.py  pyproject.toml
backend/maratonaufmg/: asgi.py  settings.py
backend/problems/: models.py  urls.py  views.py
frontend/: index.html
frontend/src/: App.tsx  main.tsx
frontend/src/assets/: global.css
frontend/src/components/AuthPageLayout/: AuthPageLayout.tsx
frontend/src/components/AuthPageWrapper/: AuthPageWrapper.tsx  index.module.css
frontend/src/components/Button/: Button.tsx  index.module.css
frontend/src/components/Checkbox/: Checkbox.tsx  index.module.css
frontend/src/components/ExternalButtonList/: ExternalButtonList.tsx  index.module.css
frontend/src/components/Field/: Field.tsx  index.module.css
frontend/src/components/FieldList/: FieldList.tsx  index.module.css
frontend/src/components/FormAuth/: FormAuth.tsx  index.module.css
frontend/src/components/FormLink/: FormLink.tsx  index.module.css
frontend/src/components/Link/: Link.tsx  index.module.css
frontend/src/components/LogoHeaderBox/: LogoHeaderBox.tsx  index.module.css
frontend/src/components/NavBox/: NavBox.tsx  index.module.css
frontend/src/components/NavItem/: NavItem.tsx  index.module.css
frontend/src/components/ProblemBox/: ProblemBox.tsx  index.module.css
frontend/src/components/ProblemItem/: ProblemItem.tsx  index.module.css
maratonaufmg/: settings.py  urls.py  wsgi.py
problems/: models.py  serializers.py  urls.py  views.py
problems/migrations/: 0001_initial.py  0002_rename_resources_resource.py
(+10 files in other folders)
