[tool.poetry]
name = "maratona-ufmg"
version = "0.1.0"
description = ""
authors = ["Igor Rocha <cinatit.igor.santos@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.6"
djangorestframework = "^3.13.1"
mysqlclient = "^2.1.1"

[tool.poetry.dev-dependencies]
python-dotenv = "^0.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
